**TΔ4 pending 서버 상태 제거**